# fluffy

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE  README.md  clang-format.sh
editor/: CMakeLists.txt  editor.cpp
editor/contrib/imguizmo/: ImGuizmo.h
editor/graphics/: editor_camera.cpp  editor_camera.hpp
editor/layers/: editor_state.cpp  editor_state.hpp  imgui_state.hpp
editor/modules/: fluffy_editor_module.cpp  fluffy_editor_module.hpp
editor/plugins/: fluffy_plugin.cpp  fluffy_plugin.hpp
editor/registry/: component_registry.cpp  component_registry.hpp  plugin_registry.cpp  plugin_registry.hpp
editor/scene/: editor_scene.cpp  editor_scene.hpp
editor/ui/: icons_font_awesome.hpp  layout.hpp
editor/ui/panels/: about_window.hpp  add_component_window.cpp  add_component_window.hpp  inspector_panel.cpp  inspector_panel.hpp  log_window.cpp  log_window.hpp  profiling_window.cpp  profiling_window.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  toolbar.cpp  toolbar.hpp  viewport_window.cpp  viewport_window.hpp
editor/ui/windows/: inspector_window.cpp  log_window.cpp  profiling_window.cpp  scene_hierarchy_window.hpp  toolbar_window.hpp  viewport_window.cpp  viewport_window.hpp
editor/windows/: about_window.hpp  inspector_window.cpp  inspector_window.hpp  log_window.cpp  log_window.hpp  profiling_window.cpp  profiling_window.hpp  scene_hierarchy_window.cpp  scene_hierarchy_window.hpp  toolbar_window.cpp  toolbar_window.hpp  viewport_window.cpp  viewport_window.hpp
fluffy/core/: CMakeLists.txt
fluffy/core/include/fluffy/: definitions.hpp  definitions.hpp.in  fluffy_core.hpp  pch.hpp
fluffy/core/src/: pch.cpp
fluffy/core/src/api/: context.cpp
fluffy/core/src/ecs/: entity.cpp  system_manager.cpp
fluffy/core/src/event/: event_manager.cpp
fluffy/core/src/game/: camera_controller.cpp  game.cpp  game_loader.cpp  game_loop.cpp  game_main.cpp
fluffy/core/src/graphics/: camera.cpp  color.cpp  painter.cpp  rectangle_shape.cpp  render_context.cpp  render_target.cpp  shape.cpp  sprite.cpp  transformable.cpp  vertex_buffers.cpp
fluffy/core/src/imgui/: imgui_container.cpp  imgui_element.cpp  imgui_panel.cpp  imgui_window.cpp
fluffy/core/src/layer/: layer.cpp  layer_stack.cpp
fluffy/core/src/profiling/: rendering_profiling.cpp
fluffy/core/src/resources/: resource.cpp  resource_collection.cpp  resource_library.cpp  resource_loader.cpp
fluffy/core/src/scene/: entity.cpp  entity_registry.cpp  scene.cpp
fluffy/core/src/state/: state.cpp
fluffy/platform/: CMakeLists.txt
fluffy/platform/opengl/: CMakeLists.txt
fluffy/platform/opengl/src/: glfw_functions.hpp  glfw_window.cpp  glfw_window.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  opengl_painter.cpp  opengl_painter.hpp  opengl_render_target.cpp  opengl_render_target.hpp  opengl_screen_render_target.cpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_video_module.cpp  opengl_video_module.hpp
fluffy/utils/: CMakeLists.txt
fluffy/utils/src/math/: rectangle.cpp
fluffy/utils/src/serialization/: json_serializer.cpp
fluffy/utils/src/signal/: slot.cpp
fluffy/utils/src/text/: string.cpp
fluffy/utils/src/time/: clock.cpp  time.cpp
fluffy/utils/src/utils/: logger.cpp
src/core/: CMakeLists.txt
src/core/include/fluffy/: assert.hpp  definitions.hpp.in  fluffy_core.hpp  pch.hpp
src/core/src/api/: context.cpp  modules.cpp
src/core/src/context/: context.cpp
src/core/src/event/: event.cpp  event_manager.cpp
src/core/src/game/: camera_controller.cpp  game.cpp  game_loader.cpp  game_loop.cpp  game_main.cpp
src/core/src/graphics/: camera.cpp  color.cpp  painter.cpp  render_target.cpp  renderer.cpp  shader.cpp  shape.cpp  texture.cpp  transform.cpp  transformable.cpp  vertex.cpp  vertex_array.cpp  window.cpp
src/core/src/imgui/: imgui_container.cpp  imgui_window.cpp
src/core/src/input/: input.cpp
src/core/src/profiling/: frame_profiling.cpp  memory_profiling.cpp  profiler.cpp  rendering_profiling.cpp  scope_profiling.cpp
src/core/src/resources/: resource.cpp  resource_collection.cpp  resource_loader.cpp  resource_metadata.cpp
src/core/src/scene/: scene.cpp  scene_node.cpp
src/core/src/state/: state.cpp  state_stack.cpp
src/ecs/: CMakeLists.txt
src/ecs/include/fluffy/: component.hpp  component_handle.hpp  component_handle.inl  entity.hpp  entity.inl  entity_manager.hpp  entity_manager.inl  fluffy_ecs.hpp  system.hpp  system_manager.hpp  system_manager.inl
src/ecs/src/: component.cpp  entity.cpp  entity_manager.cpp  system.cpp  system_manager.cpp
src/platform/: CMakeLists.txt
src/platform/glfw/: CMakeLists.txt
src/platform/glfw/src/: glfw.hpp  glfw_functions.cpp  glfw_input_impl.cpp  glfw_window.cpp  glfw_window.hpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/platform/opengl/: CMakeLists.txt
src/platform/opengl/src/: glad.c  glfw.hpp  glfw_window.hpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  opengl.cpp  opengl_painter.cpp  opengl_painter.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_screen_render_target.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex.cpp  opengl_vertex.hpp  opengl_video_module.cpp  opengl_video_module.hpp
src/utils/: CMakeLists.txt
src/utils/include/fluffy/: clock.hpp  definitions.hpp  definitions.hpp.in  fluffy_utils.hpp  json_serializer.hpp  logger.hpp  pool.hpp  pool.inl  random.hpp  random.inl  serializable.hpp  service_container.hpp  service_container.inl  string.hpp  time.hpp
src/utils/src/: clock.cpp  json_serializer.cpp  logger.cpp  pool.cpp  random.cpp  service_container.cpp  string.cpp  time.cpp
src/utils/src/file/: filesystem.cpp  (+1 more)
tests/: CMakeLists.txt  test_game.cpp  tests.cpp
tests/Utility/: ECSTest.cpp  RandomTest.cpp  SceneTest.cpp  SerializationTest.cpp  StringTest.cpp
tests/core/: scene_test.cpp  state_test.cpp
tests/ecs/: ECSTest.cpp  ecs_test.cpp
tests/utils/: SceneTest.cpp  random_test.cpp  serialization_test.cpp  string_test.cpp
(+280 files in other folders)
